# licensly-sdk-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/licensly/: client.hpp  licensly.hpp  session.hpp  types.hpp
src/: base64url.hpp  client.cpp  json_simple.hpp  session.cpp  signing.cpp
tests/: CMakeLists.txt  test_golden_verify.cpp  test_integration.cpp
